--- a/src/main/resources/templates/admin/alumno/form.html
+++ b/src/main/resources/templates/admin/alumno/form.html
@@ -163,9 +163,9 @@
        												required />
                                 </div>
                             </div>
-
+							<!-- Estado -->
                             <div class="mb-3">
-                                <div class="form-check">
+                                <div class="form-check form-switch">
                                     <input class="form-check-input" 
                                            type="checkbox" 
                                            id="activo" 
