--- a/src/main/resources/templates/admin/curso/form.html
+++ b/src/main/resources/templates/admin/curso/form.html
@@ -96,7 +96,7 @@
                             </div>
 
                             <div class="mb-3">
-                                <div class="form-check">
+                                <div class="form-check form-switch">
                                     <input class="form-check-input" 
                                            type="checkbox" 
                                            id="activo" 
