--- a/src/main/resources/templates/admin/evaluacion/listar.html
+++ b/src/main/resources/templates/admin/evaluacion/listar.html
@@ -5,6 +5,12 @@
                 <i class="bi bi-clipboard-check-fill me-2"></i>
                 Gestión de Evaluaciones
             </h2>
+			<a th:href="@{/admin/evaluacion/capacidad}" class="btn btn-success me-2">
+			            <i class="bi bi-award"></i> Capacidades
+			</a>
+			<a th:href="@{/admin/evaluacion/criterio}" class="btn btn-info me-2">
+			            <i class="bi bi-list-check"></i> Criterios
+			</a>
             <a th:href="@{/admin/evaluacion/nuevo}" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> Nueva Evaluación
             </a>
