trabajo en casa
hoy 27-10-25

--- a/bin/src/main/resources/templates/tutorpracticas/dashboard.html
+++ b/bin/src/main/resources/templates/tutorpracticas/dashboard.html
@@ -62,10 +62,10 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4 mb-3">
-    							<a th:href="@{/tutorpracticas/observaciondiaria/listar}" class="btn btn-lg btn-outline-primary w-100">
-        						<i class="fas fa-clipboard-list"></i><br>Ver Observaciones
-    							</a>
-							</div>
+                                <a href="#" class="btn btn-lg btn-outline-primary w-100">
+                                    <i class="bi bi-plus-circle"></i><br>Nueva Observacion
+                                </a>
+                            </div>
                             <div class="col-md-4 mb-3">
                                 <a href="#" class="btn btn-lg btn-outline-success w-100">
                                     <i class="bi bi-clipboard-check"></i><br>Evaluar Alumno
